# databricks-streamlit-app

./: .gitignore  main.py  pyproject.toml  tasks.py
app/: app.py  app.yaml  common.py
app/pages/: 01_Taxi_Fares.py  02_SQL_Query.py  03_Edit_Data.py
