[project]
name = "databricks-streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.70.0",
    "databricks-sql-connector>=4.1.4",
    "pandas>=2.2.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
]
